# trivial-templates

./: trivial-templates.cabal
Text/: TrivialTemplates.hs
Text/TrivialTemplates/: Parser.hs
